--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "tsc --watch",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts --no-warn-ignored",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -42,16 +42,19 @@
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.57.1",
+    "globals": "^16.2.0",
     "jest": "^29.4.3",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.33.0"
   },
   "files": [
     "dist/**/*",
