--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "globals": "^16.2.0",
     "jest": "^29.4.3",
     "prettier": "^2.8.4",
+    "semantic-release": "^24.2.5",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.33.0"
