--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
+    "conventional-changelog-conventionalcommits": "^9.0.0",
     "eslint": "^8.57.1",
     "globals": "^16.2.0",
     "jest": "^29.4.3",
